<resources>
    <string name="app_name">9 Box</string>
    <string name="creator">Athe1stB</string>
    <string name="none"> </string>
    <string name="easy">Easy</string>
    <string name="MEDIUM">Medium</string>
    <string name="HARD">Hard</string>
    <string name="DIFFICULTY">Choose Difficulty</string>
    <string name="n0">0</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="moves">Moves: </string>
    <string name="username">Username: </string>
    <string name="rules">Rules</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="minmoves">Minimum Moves</string>
    <string name="best">Min: </string>
    <string name="reset">Reset</string>
    <string name="newgame">New Game</string>
    <string name="seesol">Solution</string>
    <string name="name">Name</string>
    <string name="resume">Resume</string>
    <string name="mainMenu">Main Menu</string>
    <string name="feedback">Feedback</string>
    <string name="exit">Exit</string>
    <string name="playername">Player Name</string>
    <string name="hey">Hey Athe1stB !</string>
    <string name="totalscore">Score</string>
    <string name="totalwins">Wins</string>
    <string name="totalgames">Played</string>
    <string name="unsolved">Unsolved State: </string>
    <string name="solved">Solved State: </string>
    <string name="instructions">How To Play</string>
    <string name="rank">Rank</string>
    <string name="credits">Credits</string>
    <string name="info">Info</string>
    <string name="infopara">The 9 Box puzzle (also called Gem Puzzle, Boss Puzzle, Game of Nine, Mystic Square and many others) is a sliding puzzle that consists of a frame of numbered square tiles in random order with one tile missing. The puzzle also exists in other sizes, particularly the larger 16 box puzzle. If the size is 3×3 tiles, the puzzle is called the 8 puzzle or 9 puzzle, and if 4×4 tiles, the puzzle is called the 15 puzzle or 16 puzzle named, respectively, for the number of tiles and the number of spaces.\n\nThe goal of the puzzle is to place the tiles in order by making sliding moves that use the empty space. </string>
    <string name="play">Play!</string>
    <string name="youwin">Aw Yiss!</string>
    <string name="instructionstext">Touch a block adjacent to free space to move it there.\nYour goal is to rearrange the block in ascending order in minimum possible moves.\nYou can only move the block adjacent to a free space vertically or horizontally.\nEnjoy!</string>
    <string name="youwinsent">You completed the puzzle in </string>
    <string name="min">Min: </string>
</resources>
