<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".afterwin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="normal"
            android:textSize="50sp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ewert"
            android:textColor="@color/green"
            android:text="@string/youwin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:text="@string/youwinsent"/>
        <TextView
            android:id="@+id/xmoves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/ewert"
            android:textStyle="bold"
            android:text="@string/moves"
            />
    </LinearLayout>

</ScrollView>