<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood2"
    tools:context=".setDifficulty">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <Button
            android:id="@+id/easybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textColor="@color/white"
            android:text="@string/easy"
            android:background="@color/mag4"/>
        <Button
            android:id="@+id/mediumbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textColor="@color/white"
            android:text="@string/MEDIUM"
            android:background="@color/orange"/>
        <Button
            android:id="@+id/hardbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textColor="@color/white"
            android:text="@string/HARD"
            android:background="@color/red"/>
    </LinearLayout>

</ScrollView>