<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instructions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/literate"
            android:lineSpacingExtra="5sp"
            android:text="@string/instructionstext"
            android:textColor="#444444"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsolved"
            android:textColor="@color/purple"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/unsolvedpuzzle"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solved"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="20sp"/>
        <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/solvedpuzzle"/>

    </LinearLayout>

</ScrollView>