<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/username"
                android:textColor="@color/purple"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/creator"
                android:textColor="@color/orange"
                android:textSize="30sp"/>

        </LinearLayout><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/moves"
            android:textColor="@color/purple"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/n0"
            android:textColor="@color/orange"
            android:textSize="30sp"/>

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:id="@+id/b1"
                    style="@style/button"/>
                <Button
                    android:id="@+id/b2"
                    style="@style/button"/>
                <Button
                    android:id="@+id/b3"
                    style="@style/button"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/b4"
                style="@style/button"/>
            <Button
                android:id="@+id/b5"
                style="@style/button"/>
            <Button
                android:id="@+id/b6"
                style="@style/button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/b7"
                style="@style/button"/>
            <Button
                android:id="@+id/b8"
                style="@style/button"/>
            <Button
                android:id="@+id/b9"
                style="@style/button"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
