<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/popupmenu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/whitecard"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/lipstickred">

    <TextView
        android:id="@+id/popupmaintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="50sp"
        android:text="@string/youwin"
        android:fontFamily="@font/luckiest_guy"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/popupmovestext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youwinsent"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/popupmoves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/popuptimetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time taken"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"/>

        <Chronometer
            android:id="@+id/popuptime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </LinearLayout>

    <Button
        android:id="@+id/popupresume"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/redplay"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/popupexitgame"
            android:layout_width="50sp"
            android:layout_height="60dp"
            android:background="@drawable/exitbuttonwhite"
            android:layout_margin="8dp"/>
        <Button
            android:id="@+id/popuprestart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/restartwhite"
            android:layout_margin="8dp"
            />
        <Button
            android:id="@+id/popupnewgame"
            android:layout_width="50sp"
            android:layout_height="60dp"
            android:background="@drawable/menuwhite"
            android:layout_margin="8dp"/>
        <Button
            android:id="@+id/popupsolution"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/lightbulbwhite"/>

    </LinearLayout>


    </LinearLayout>
</LinearLayout>
